data/derived/comb/progs/unify/prog4872.ml.out
Characters 189-190:
  let (_, res) = List.fold_left f base args in
                                ^
Error: This expression has type (int * int) list -> int list -> int list
       but an expression was expected of type
         (int * int) list -> int list -> (int * int) list
       Type int is not compatible with type int * int 
